parser.output
Nonterminals useless in grammar

   role
   indv
   complex_concept
   name


Terminals unused in grammar

   BOOLVAL
   INTVAL
   STRVAL
   INT
   BOOL
   STR
   ROLE
   INDV
   SUBS
   CONJ
   DISJ
   EX
   ALL
   END
   COMPARISON
   '#'
   '!'
   '.'


Regole inutili nella grammatica

    4 role: ROLE NAME

    5 indv: INDV NAME

    6 complex_concept: concept
    7                | complex_concept CONJ concept
    8                | complex_concept DISJ concept
    9                | '!' complex_concept
   10                | EX role '.' complex_concept
   11                | ALL role '.' complex_concept


Grammatica

    0 $accept: concept $end

    1 concept: CONCEPT NAME
    2        | THING
    3        | NOTHING


Simboli terminali e regole in cui appaiono

$end (0) 0
'!' (33)
'#' (35)
'.' (46)
error (256)
BOOLVAL (258)
INTVAL (259)
NAME (260) 1
STRVAL (261)
INT (262)
BOOL (263)
STR (264)
CONCEPT (265) 1
ROLE (266)
INDV (267)
SUBS (268)
CONJ (269)
DISJ (270)
EX (271)
ALL (272)
THING (273) 2
NOTHING (274) 3
END (275)
COMPARISON (276)


Simboli nonterminali e regole in cui appaiono

$accept (25)
    nel primo membro: 0
concept (26)
    nel primo membro: 1 2 3, nel secondo membro: 0


Stato 0

    0 $accept: . concept $end

    CONCEPT  shift e prosecuzione allo stato 1
    THING    shift e prosecuzione allo stato 2
    NOTHING  shift e prosecuzione allo stato 3

    concept  prosecuzione allo stato 4


Stato 1

    1 concept: CONCEPT . NAME

    NAME  shift e prosecuzione allo stato 5


Stato 2

    2 concept: THING .

    $default  riduzione con la regola 2 (concept)


Stato 3

    3 concept: NOTHING .

    $default  riduzione con la regola 3 (concept)


Stato 4

    0 $accept: concept . $end

    $end  shift e prosecuzione allo stato 6


Stato 5

    1 concept: CONCEPT NAME .

    $default  riduzione con la regola 1 (concept)


Stato 6

    0 $accept: concept $end .

    $default  accetta
